[package]
name = "meshviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
inquire = { version = "0.7.5", features = ["date", "editor"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.20.2"
rusqlite = { version = "0.32.0", features = ["bundled"] }
colored = "2.1.0"
dotenvy = "0.15.7"
clap = { version = "4.5.20", features = ["derive"] }
meshtastic = "0.1.6"
serialport = "4.5.1"
